--- a/IDEOBJETO/src/com/Traductores/Views/PantallaInicio.form
+++ b/IDEOBJETO/src/com/Traductores/Views/PantallaInicio.form
@@ -58,6 +58,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Nuevo Archivo"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="menuItemNuevoArchivoActionPerformed"/>
+              </Events>
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="menuItemAbriProyecto">
               <Properties>
