Se agregan pantalla para agregar un Ciclo

--- a/IDEOBJETO/src/com/Traductores/Views/AgregarMetodos.form
+++ b/IDEOBJETO/src/com/Traductores/Views/AgregarMetodos.form
@@ -26,6 +26,8 @@
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
               <Component id="BotonAgregarNuevoMetodo" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+              <Component id="botonAgregarCiclo" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="botonTerminar" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -133,6 +135,7 @@
                   <Component id="BotonAgregarNuevoMetodo" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="botonTerminar" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="botonCancelar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="botonAgregarCiclo" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -277,6 +280,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonTerminarParametrosActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="botonAgregarCiclo">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Agregar Ciclo"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="botonAgregarCicloActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
